# c3-hackathon-undefined

./: .env  .envrc  .eslintignore  .eslintrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sample.env  .stylelintignore  .stylelintrc  .vale.ini  LICENSE  Makefile  OLD_LICENSE  README.md  STANDARDS.md  c3_mcp_requirement.yaml  hello.sh  package.json  pr_writer.py  pyproject.toml
.github/workflows/: c3standards-ci.yml  c3standards-upgrader.yml
.jarvis/: README.md
.jarvis/steps/: buildSummary.js  c3standardsStepInstError.js  codeAnalysis.js  codeAnalysisInit.js  codeAnalysisSummary.js  docgen.js  generatePackageSteps.js  semanticVersionValidation.js  stashMultiRepo.js
.jarvis/steps/config/: config.js
.vale/styles/C3/: CommonMisspells.yml  Conjunctions.yml  FieldLink.yml  InlineSee.yml  LinkNoClosingBrace.yml  LinkSpacing.yml  LinkTypo.yml  MergeConflictMarkers.yml  NonStandardQuotes.yml  Spacing.yml  Spelling.yml
.vale/styles/config/vocabularies/C3/: accept.txt
docs/: feature_pr_template.md  hotfix_pr_template.md  pull_request_template.md
scripts/: beluga  bl
scripts/c3standards-upgrader/: c3standards-upgrader.py
scripts/hooks/c3typ-lint/: c3typ-lint.sh  identify_undocumented_fields.pl  preprocess_c3typ_file.pl
scripts/semantic-version-manager/: semantic-version-manager.py
setup/: Makefile
setup/playbooks/: setup.yml
setup/playbooks/vars/: main.yml
setup/roles/direnv/tasks/: main.yml
setup/roles/pre-commit/tasks/: main.yml
setup/roles/vale/tasks/: main.yml
src/: pr_writer.py  pragent
src/beluga/: ai_agent.py  beluga.c3pkg.json  cli.py  git_utils.py  jira_utils.py  messages.py  pr_writer.py
src/beluga.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/beluga/src/: PrAgent.c3typ  PrAgent.py  PrAgentConfig.c3typ  agenticCli.py  ai_agent.py  cli.py  git_utils.py  jira_utils.py  messages.py  pr_writer.py  random.py  read_code_diff_tool.py  testHook.py
src/narwhal/: cli.py
src/narwhal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
