# -------------------------------------------------------------------
# Project metadata & entry point
# -------------------------------------------------------------------
# What it does:
#   - Defines your package name, deps, and console_scripts
#
# Key parts:
#   [project.scripts] bl = "beluga.src.cli:cli"
#     → Tells pip/setuptools to install a `bl` binary
#
# Where to add changes:
#   - Add new CLI entry points under [project.scripts]
#
# What not to change:
#   - The build-system section
#   - The name = "beluga" if your package name must stay consistent
#
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beluga"
version = "0.1.0"
description = "Agentic AI PR creator for C3–Hackathon"
requires-python = ">=3.8"
dependencies = [
  "click>=8.0.0",
  "GitPython>=3.1.0",
  "PyGithub>=1.59.0",
  "python-dotenv>=1.0.0",
  "openai",
  "requests",
]

[project.scripts]
# CLI command → module:function
bl = "beluga.src.cli:cli"